# rpm_meter

./: CMakeLists.txt  Makefile  README.md
include/: config.h  gpio.h  i2c.h  liquid_crystal_i2c.h  rpm.h
src/: gpio.c  i2c.c  liquid_crystal_i2c.c  main.c  rpm.c
