CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(TARGET "RPM_Meter")
SET(PROJECT_NAME "${TARGET} firmware")
SET(PROJECT_DESCRIPTION "RPM Meter firmware")

PROJECT(${PROJECT_NAME} LANGUAGES C ASM)

SET(CMAKE_C_COMPILER avr-gcc)
SET(CMAKE_LINKER avr-gcc)
SET(AVRDUDE avrdude)

SET(CMAKE_SYSTEM_NAME "Generic")
SET(CMAKE_SYSTEM_PROCESSOR "avr")
SET(CMAKE_C_COMPILER_TARGET avr)

SET(CMAKE_C_FLAGS "-Os -mmcu=atmega328p")
SET(CMAKE_EXE_LINKER_FLAGS "-mmcu=atmega328p")

SET(INCLUDE_PATH "${PROJECT_SOURCE_DIR}/include")
SET(SRC_PATH "${PROJECT_SOURCE_DIR}/src")
SET(LIB_PATH "${PROJECT_SOURCE_DIR}/lib")
SET(BUILD_DIR "${PROJECT_SOURCE_DIR}/build")
SET(ELF_FILE "${BUILD_DIR}/${TARGET}.elf")
SET(BIN_FILE "${BUILD_DIR}/${TARGET}.bin")
SET(HEX_FILE "${BUILD_DIR}/${TARGET}.hex")
SET(MAP_FILE "${BUILD_DIR}/${TARGET}.map")

INCLUDE_DIRECTORIES("${INCLUDE_PATH}")

FILE(GLOB_RECURSE USER_SRCS "${SRC_PATH}/*.c")

ADD_EXECUTABLE(${TARGET} ${USER_SRCS})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIR})
